# Projeto-Biblioteca

./: .coveragerc  cz.yaml  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: release.yml
.github/workflows/: pre-release.yml  release.yml  tests.yml
static/css/: site.css
